# final-form

./: .gitignore  .specwright.yaml  FINAL-FORM-ARCH.md  FINAL-FORM-BUILD-PLAN.md  FINALFORM-ARCH.md  FINALFORM-BUILD-PLAN.md  PROGRESS.md  README.md  pyproject.toml
.aip_artifacts/: execution_history.jsonl
.specwright/aips/: final-form-initial-spec.yaml  rename-to-finalform.yaml
.specwright/specs/: final-form-initial-spec.md  rename-to-finalform.md
final_form/: __init__.py  cli.py  config.py  io.py
final_form/builders/: __init__.py  measurement.py
final_form/diagnostics/: __init__.py  collector.py  models.py
final_form/interpretation/: __init__.py  interpreter.py
final_form/mapping/: __init__.py  mapper.py
final_form/pipeline/: __init__.py  orchestrator.py
final_form/recoding/: __init__.py  recoder.py
final_form/registry/: __init__.py  bindings.py  instruments.py  models.py
final_form/scoring/: __init__.py  engine.py  methods.py
finalform/: __init__.py  cli.py  config.py
finalform/core/: domain.py  (+5 more)
form-binding-registry/: README.md
schemas/: form_binding_spec.schema.json  instrument_spec.schema.json  measurement_event.schema.json  observation.schema.json
scripts/: convert_registry.py
tests/: conftest.py  test_all_measures.py  test_builders.py  test_core.py  test_determinism.py  test_diagnostics.py  test_domain_stubs.py  test_form_input.py  test_gad7_scoring.py  test_interpretation.py  test_mapper.py  test_phq9_scoring.py  test_pipeline.py  test_questionnaire_processor.py  test_recoder.py  test_registry.py  test_scoring.py  test_validation.py
(+42 files in other folders)
