[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "final-form"
version = "0.1.0"
description = "Semantic processing engine for mental health questionnaire responses"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Ben the Psychologist" }
]
dependencies = [
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
final-form = "final_form.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/final_form"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
